# gn-queue-manager

./: .gitignore  Cargo.toml  Shuttle.toml
.github/workflows/: rust.yml
src/: main.rs
src/controllers/: mod.rs
src/migrations/: 20240816_visitors_creation.sql  20240817_visitors_add_fields.sql  20240910_visitors_add_fields.sql
src/visitor/: mod.rs
